--- a/index.html
+++ b/index.html
@@ -1,1 +1,41 @@
-Hello World
+<html>
+<head>
+    <title>MilkshakeTheCoder</title>
+    <link rel="stylesheet" href="stylesheet.css">
+</head>
+<body>
+    <div class="container">
+        <div class="navbar">
+                <h1 style = "position:relative; left:30%; color:lightskyblue;">Hi! My name is <span style="color: #ff5555">Aahil</span> <br> I also go by <span style="color: #ff5555">MilkshakeTheCoder</span> <br> I am an amateur developer and I like to code and have fun.</h1>
+            <nav>
+                <ul>
+                </ul>
+            </nav>
+<!-- link in image. -->
+        <a href="https://github.com/MilkshakeTheCoder">
+            <img src="Images/github.png" class="github">
+        </a>
+        </div>
+        <article>
+        <section>
+            <h2 style="color:#ff5555"><u>About Me</u></h2>
+            <p>Text</p>
+            <!-- <img class="medium" src="Images/palette.png"/> -->
+        </article>
+        <div class="content">
+            <!-- <a href="" class="btn">Cool stuff</a>
+            <h1>Test Content 1</h1>
+            <p>Test Content 2</p>
+            <div class="arrow_icons">
+                <img src="Images/Back_Arrow.png">
+                <img src="Images/Forward_Button.png">
+            </div> -->
+        </div>
+        <div class="social_links">
+            <a href="https://discord.gg/CtNTUX4znA">Discord</a>
+            <a href="https://github.com/MilkshakeTheCoder">Github</a>
+            <a href="https://stackoverflow.com/users/15837152/aahil-py">Stackoverflow</a>
+        </div>
+    </div>
+</body>
+</html>
