--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
     <div class="container">
         <div class="navbar">
-                <h1 style = "position:relative; left:30%; color:lightskyblue;">Hi! My name is <span style="color: #ff5555">Aahil</span> <br> I also go by <span style="color: #ff5555">MilkshakeTheCoder</span> <br> I am an amateur developer and I like to code and have fun.</h1>
+                <h1 style = "position:relative; left:30%; color:lightskyblue;">Hi! My name is <span style="color: #ff5555">Aahil</span> <br> I also go by <span style="color: #ff5555">MilkshakeTheCoder</span> <br> I am an <span style="color: #ff5555">amateur developer</span> and I like to code and have fun.</h1>
             <nav>
                 <ul>
                 </ul>
