--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         <article>
         <section>
-            <h2 style="color:#ff5555"><u>About Me</u></h2>
+            <h2 style="color:#ff5555">About Me</h2>
             <p>Text</p>
             <!-- <img class="medium" src="Images/palette.png"/> -->
         </article>
