--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
         <section>
             <h2 style="color:#ff5555">About Me</h2>
             <p>Text</p>
+        </section>
             <!-- <img class="medium" src="Images/palette.png"/> -->
+        <section>
+            <h2 style="color:#ff5555">About Me</h2>
+            <p>Text</p>
+        </section>
         </article>
         <div class="content">
             <!-- <a href="" class="btn">Cool stuff</a>
@@ -31,11 +36,11 @@
                 <img src="Images/Forward_Button.png">
             </div> -->
         </div>
-        <div class="social_links">
+        <!-- <div class="social_links">
             <a href="https://discord.gg/CtNTUX4znA">Discord</a>
             <a href="https://github.com/MilkshakeTheCoder">Github</a>
             <a href="https://stackoverflow.com/users/15837152/aahil-py">Stackoverflow</a>
-        </div>
+        </div> -->
     </div>
 </body>
 </html>
