--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <a href="https://github.com/MilkshakeTheCoder">
             <img src="Images/github.png" class="github">
         </a>
+        <a href="https://discord.gg/CtNTUX4znA">
+            <img src="Images/discord.png" class="discord">
+        </a>
         </div>
         <article>
         <section>
