--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <img src="Images/github.png" class="github">
         </a>
         <a href="https://discord.gg/CtNTUX4znA">
-            <img src="Images/discord.png" class="discord">
+            <img src="Images/discord2.png" class="discord">
         </a>
         </div>
         <article>
