--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         <a href="https://discord.gg/CtNTUX4znA">
             <img src="Images/discord2.png" class="discord">
         </a>
+        <a href="https://stackoverflow.com/users/15837152/aahil-py">
+            <img src="Images/stackoverflow.png" class="stackoverflow">
+        </a>
         </div>
         <article>
         <section>
