--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
     <div class="container">
         <div class="navbar">
-                <h1 style = "position:relative; left:30%; color:lightskyblue;">Hi! My name is <span style="color: #ff5555">Aahil</span> <br> I also go by <span style="color: #ff5555">MilkshakeTheCoder</span> <br> I am an <span style="color: #ff5555">amateur developer</span> and I like to code and have fun.</h1>
+                <h1 style = "position:relative; left:30%; color:lightskyblue;">Hi! My name is <span style="color: #ff5555; font-size: larger;">Aahil</span> <br> I also go by <span style="color: #ff5555">MilkshakeTheCoder</span> <br> I am an <span style="color: #ff5555">amateur developer</span> and I like to code and have fun.</h1>
             <nav>
                 <ul>
                 </ul>
@@ -25,7 +25,7 @@
         <article>
         <section>
             <h2 style="color:#ff5555">About Me</h2>
-            <p>Text</p>
+            <p>Hi, My name is Aahil. I </p>
         </section>
             <!-- <img class="medium" src="Images/palette.png"/> -->
         </article>
