--- a/index.html
+++ b/index.html
@@ -27,6 +27,22 @@
             <h2 style="color:#ff5555">About Me</h2>
             <p>Hi, My name is Aahil. I </p>
         </section>
+        <section>
+            <h2 style="color:#ff5555">About Me</h2>
+            <p>Hi, My name is Aahil. I </p>
+        </section>
+        <section>
+            <h2 style="color:#ff5555">About Me</h2>
+            <p>Hi, My name is Aahil. I </p>
+        </section>
+        <section>
+            <h2 style="color:#ff5555">About Me</h2>
+            <p>Hi, My name is Aahil. I </p>
+        </section>
+        <section>
+            <h2 style="color:#ff5555">About Me</h2>
+            <p>Hi, My name is Aahil. I </p>
+        </section>
             <!-- <img class="medium" src="Images/palette.png"/> -->
         </article>
         <div class="content">
