--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
                 </ul>
             </nav>
 <!-- link in image. -->
+    <div class="sliding-background">
+        
+    </div>
         <a href="https://github.com/MilkshakeTheCoder">
             <img src="Images/github.png" class="github">
         </a>
