--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@
                 </ul>
             </nav>
 <!-- link in image. -->
-    <div class="sliding-background">
-        
-    </div>
-        <a href="https://github.com/MilkshakeTheCoder">
-            <img src="Images/github.png" class="github">
-        </a>
+        <div class="img">
+            <a href="https://github.com/MilkshakeTheCoder">
+                <img src="Images/github.png" class="github">
+            </a>
+        <div>
         <a href="https://discord.gg/CtNTUX4znA">
             <img src="Images/discord2.png" class="discord">
         </a>
