starting to come together

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
             </nav>
 <!-- link in image. -->
         <a href="https://github.com/MilkshakeTheCoder">
-            <img src="Images/github.png" class="specialimg">
+            <img src="Images/github.png" class="github">
         </a>
         <a href="https://discord.gg/CtNTUX4znA">
-            <img src="Images/discord2.png" class="specialimg">
+            <img src="Images/discord2.png" class="discord">
         </a>
         <a href="https://stackoverflow.com/users/15837152/aahil-py">
-            <img src="Images/stackoverflow.png" class="specialimg">
+            <img src="Images/stackoverflow.png" class="stackoverflow">
         </a>
         </div>
         <article>
