--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
     <div class="container">
         <div class="navbar">
-                <h1 style = "position:relative; left:30%; color:lightskyblue;">Hi! My name is <span style="color: #ff5555; font-size: larger;">Aahil</span> <br> I also go by <span style="color: #ff5555">MilkshakeTheCoder</span> <br> I am an <span style="color: #ff5555">amateur developer</span> and I like to code and have fun.</h1>
+                <h1 style = "position:relative; left:30%; color:#a1d5ff;">Hi! My name is <span style="color: #ca2828; font-size:x-large;">Aahil</span>. <br> I also go by <span style="color: #ca2828; font-size:x-large;">MilkshakeTheCoder</span>. <br> I am an <span style="color: #ca2828; font-size:x-large;">Amateur Developer</span> and I like to code and have fun.</h1>
             <nav>
                 <ul>
                 </ul>
@@ -24,23 +24,23 @@
         </div>
         <article>
         <section>
-            <h2 style="color:#ff5555">About Me</h2>
+            <h2 style="color:#ca2828">About Me</h2>
             <p>Hi, My name is Aahil. I </p>
         </section>
         <section>
-            <h2 style="color:#ff5555">About Me</h2>
+            <h2 style="color:#ca2828">About Me</h2>
             <p>Hi, My name is Aahil. I </p>
         </section>
         <section>
-            <h2 style="color:#ff5555">About Me</h2>
+            <h2 style="color:#ca2828">About Me</h2>
             <p>Hi, My name is Aahil. I </p>
         </section>
         <section>
-            <h2 style="color:#ff5555">About Me</h2>
+            <h2 style="color:#ca2828">About Me</h2>
             <p>Hi, My name is Aahil. I </p>
         </section>
         <section>
-            <h2 style="color:#ff5555">About Me</h2>
+            <h2 style="color:#ca2828">About Me</h2>
             <p>Hi, My name is Aahil. I </p>
         </section>
             <!-- <img class="medium" src="Images/palette.png"/> -->
