starting to come together

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
     <div class="container">
         <div class="navbar">
-                <h1 style = "position:relative; left:30%; color:#a1d5ff;">Hi! My name is <span style="color: #ca2828; font-size:x-large;">Aahil</span>. <br> I also go by <span style="color: #ca2828; font-size:x-large;">MilkshakeTheCoder</span>. <br> I am an <span style="color: #ca2828; font-size:x-large;">Amateur Developer</span> and I like to <span style="color: #ca2828; font-size:x-large;">code</span> and have fun.</h1>
+                <h1 style = "position:relative; left:30%; color:#a1d5ff;">Hi! My name is <span style="color: #ca2828; font-size:x-large;">Aahil</span>. <br> <span style="font-size: x-large;">I also go by <span style="color: #ca2828">MilkshakeTheCoder</span></span>. <br> I am an <span style="color: #ca2828; font-size:x-large;">Amateur Developer</span> and I like to <span style="color: #ca2828; font-size:x-large;">code</span> and have fun.</h1>
             <nav>
                 <ul>
                 </ul>
