starting to come together

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
     <div class="container">
         <div class="navbar">
-                <h1 style = "position:relative; left:30%; color:#a1d5ff;">Hi! My name is <span style="color: #ca2828; font-size:+50;">MilkshakeTheCoder</span>. <br> I am a rising <span style="color: #ca2828">9th Grader</span>. <br> I am an <span style="color: #ca2828; font-size:+50;">Amateur Developer</span> and I like to <span style="color: #ca2828; font-size:+50;">Code</span> and have fun.</h1>
+                <h1 style = "position:relative; left:30%; color:#a1d5ff;">Hi! My name is <span style="color: #ca2828; font-size:+50;">MilkshakeTheCoder</span>. <br> I am a rising <span style="color: #ca2828; font-size: +50;">9th Grader</span>. <br> I am an <span style="color: #ca2828; font-size:+50;">Amateur Developer</span> and I like to <span style="color: #ca2828; font-size:+50;">Code</span> and have fun.</h1>
             <nav>
                 <ul>
                 </ul>
