--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <article>
         <section>
             <h2 style="color:#ca2828">About Me</h2>
-            <p>Hi, My name is Aahil. I </p>
+            <p>Hi, My name is Aahil. I am a rising ninth grader </p>
         </section>
         <section>
             <h2 style="color:#ca2828">About Me</h2>
