--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 </ul>
             </nav>
 <!-- link in image. -->
-        <!-- <a href="https://github.com/MilkshakeTheCoder">
+        <a href="https://github.com/MilkshakeTheCoder">
             <img src="Images/github.png" class="github">
         </a>
         <a href="https://discord.gg/CtNTUX4znA">
@@ -20,7 +20,7 @@
         </a>
         <a href="https://stackoverflow.com/users/15837152/aahil-py">
             <img src="Images/stackoverflow.png" class="stackoverflow">
-        </a> -->
+        </a>
         </div>
         <article>
         <section>
