--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <article>
         <section>
             <h2 style="color:#ca2828">About Me</h2>
-            <p>Hi, My name is Aahil. I am a rising ninth grader and I plan in </p>
+            <p>Hi, My name is Aahil. I am a rising ninth grader and I plan on majoring in software engineering. I like to code</p>
         </section>
         <section>
             <h2 style="color:#ca2828">About Me</h2>
