--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
 </head>
 <body>
     <div class="container">
+
+        <!--I put this in a new div above the navbar stuff. check css for this new class!-->
+        <div class="text-container">
+            <!--Note that the "left: 30%" thing is gone here. that was causing positioning issues-->
+            <h1 style = "position:relative; color:#a1d5ff;">Hi! My name is <span style="color: #ca2828; font-size:+50;">MilkshakeTheCoder</span>. <br> I am a rising <span style="color: #ca2828; font-size: +50;">9th Grader</span>. <br> I am an <span style="color: #ca2828; font-size:+50;">Amateur Developer</span> and I like to <span style="color: #ca2828; font-size:+50;">Code</span> and have fun.</h1>
+        </div>
+
         <div class="navbar">
-                <h1 style = "position:relative; left:30%; color:#a1d5ff;">Hi! My name is <span style="color: #ca2828; font-size:+50;">MilkshakeTheCoder</span>. <br> I am a rising <span style="color: #ca2828; font-size: +50;">9th Grader</span>. <br> I am an <span style="color: #ca2828; font-size:+50;">Amateur Developer</span> and I like to <span style="color: #ca2828; font-size:+50;">Code</span> and have fun.</h1>
             <nav>
                 <ul>
                 </ul>
