--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <div class="navbar">
         <!--I put this in a new div above the navbar stuff. check css for this new class!-->
         <div class="text-container">
-            <!--Note that the "left: 30%" thing is gone here. that was causing positioning issues-->
             <h1 style = "position:relative; left: 35%; color:#a1d5ff;">Hi! My name is <span style="color: #ca2828; font-size:+50;">MilkshakeTheCoder</span>. <br> I am a rising <span style="color: #ca2828; font-size: +50;">9th Grader</span>. <br> I am an <span style="color: #ca2828; font-size:+50;">Amateur Developer</span> and I like to <span style="color: #ca2828; font-size:+50;">Code</span> and have fun.</h1>
         </div>
             <nav>
@@ -30,6 +29,9 @@
         <section>
             <h2 style="color:#ca2828">About Me</h2>
             <p>Hi, My name is Aahil. I am a rising ninth grader and I plan on majoring in software engineering. I like to code</p>
+            <a href="https://github.com/MilkshakeTheCoder/Cafe_Bot">
+                <img src="https://github-readme-stats.vercel.app/api/pin/?username=MilkshakeTheCoder&repo=Cafe_Bot&theme=algolia" />
+            </a>
         </section>
         </article>
     </div>
