--- a/index.html
+++ b/index.html
@@ -28,25 +28,19 @@
         <article>
         <section>
             <h2 style="color:#ca2828">About Me</h2>
-            <p>Hi, My name is Aahil. I am a rising ninth grader and I plan on majoring in software engineering. I love to code in lots of languages. As of right now, I'm working on developing Discord Bots and learning Python better as a whole. I like to take computers apart (my dad has tons of old unused computers) and put them back together. I love to install new operating systems and play around with all the possibilites with different distributions of linux. 
+            <p>👋 Hi, My name is Aahil. I am a rising ninth grader and I plan on majoring in software engineering. I love to code in lots of languages. As of right now, I'm working on developing Discord Bots and learning Python better as a whole. I like to take computers apart (my dad has tons of old unused computers) and put them back together. I love to install new operating systems and play around with all the possibilites with different distributions of linux. <br> 
 
-I also wanna learn other languages such as: C, JS, and a better knowledge of HTML/CSS. 
+🗣 I also wanna learn other languages such as: C, JS, and a better knowledge of HTML/CSS. <br>
 
-👀 I’m mainly interested in topics such as discord.py, parsing, python, web-hosting, mongodb, youtube, and video games. I’m currently learning Python and integration with mongodb (also how to fancy-up README.md files lol). 
+👀 I’m mainly interested in topics such as Discord.py, HTML/CSS, Python, Web-Hosting (on raspberry pi), Mongodb, Youtube, and Video Games. I’m currently learning how to make this cool website using css and html elements. <br>
 
-🤝 I’m currently collaborating on [Cafe_Bot](https://github.com/MilkshakeTheCoder/Cafe_Bot) with [andrewthederp](https://github.com/andrewthederp).
-
-👨‍💻 I am currently working mainly on my repositories [Learning-Python](https://github.com/MilkshakeTheCoder/Learning-Python) and [Learning-HTML](https://github.com/MilkshakeTheCoder/Learning-HTML).
-
-📬 How to reach me: Make an issue on one of my github repositories, or click one of the buttons in the [Get In Touch With Me](#get-in-touch-with-me) section below. 
-
-📺 I like to watch most movies (as long as they're not princess movies). 
+📬 How to reach me: Make an issue on one of my github repositories, or click on one of the buttons in the bottom-most section. <br> 
 
 👨‍🍳 I enjoy many cuisines and I am slowly learning to make foods from all of them. 
 
-🐙 Most of my code will be posted here on github, because I like uploading big projects here so other people can also see and learn from those. 
+🐙 Most of my code will be posted on github, because I like uploading big projects here so other people can also see and learn from those. 
 
-I also just feel that open source projects are more reliable as compared to closed-source projects. Thanks for vising my github page, be sure to explore my repositories, and have a great day!
+I also just feel that open source projects are more reliable as compared to closed-source projects. Thanks for vising website page, be sure to explore the rest of the page, and have a great day!
             </p>
         </section>
         </article>
