--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
         <article>
         <section>
             <h2 style="color:#ca2828">About Me</h2>
-            <p>👋 Hi, My name is Aahil. I am a rising ninth grader and I plan on majoring in software engineering. I love to code in lots of languages. As of right now, I'm working on developing Discord Bots and learning Python better as a whole. I like to take computers apart (my dad has tons of old unused computers) and put them back together. I love to install new operating systems and play around with all the possibilites with different distributions of linux. <br> 
+            <p>👋 Hi, My name is Aahil. I am a rising ninth grader and I plan on majoring in software engineering. I love to code in lots of languages. As of right now, I'm working on developing Discord Bots and learning Python better as a whole. I like to take computers apart (my dad has tons of old unused computers) and put them back together. I love to install new operating systems and play around with all the possibilites with different distributions of linux. <br> <br> 
 
-🗣 I also wanna learn other languages such as: C, JS, and a better knowledge of HTML/CSS. <br>
+🗣 I also wanna learn other languages such as: C, JS, and a better knowledge of HTML/CSS. <br> <br> 
 
-👀 I’m mainly interested in topics such as Discord.py, HTML/CSS, Python, Web-Hosting (on raspberry pi), Mongodb, Youtube, and Video Games. I’m currently learning how to make this cool website using css and html elements. <br>
+👀 I’m mainly interested in topics such as Discord.py, HTML/CSS, Python, Web-Hosting (on raspberry pi), Mongodb, Youtube, and Video Games. I’m currently learning how to make this cool website using css and html elements. <br> <br> 
 
-📬 How to reach me: Make an issue on one of my github repositories, or click on one of the buttons in the bottom-most section. <br> 
+📬 How to reach me: Make an issue on one of my github repositories, or click on one of the buttons in the bottom-most section. <br> <br> 
 
-👨‍🍳 I enjoy many cuisines and I am slowly learning to make foods from all of them. 
+👨‍🍳 I enjoy many cuisines and I am slowly learning to make foods from all of them. <br> <br> 
 
-🐙 Most of my code will be posted on github, because I like uploading big projects here so other people can also see and learn from those. 
+🐙 Most of my code will be posted on github, because I like uploading big projects here so other people can also see and learn from those. <br> <br> 
 
 I also just feel that open source projects are more reliable as compared to closed-source projects. Thanks for vising website page, be sure to explore the rest of the page, and have a great day!
             </p>
