--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <div class="navbar">
         <!--I put this in a new div above the navbar stuff. check css for this new class!-->
         <div class="text-container">
-            <h1 style = "position:relative; color:#a1d5ff;">Hi! My name is <span style="color: #ca2828; font-size:+50;">MilkshakeTheCoder</span>. <br> I am a rising <span style="color: #ca2828; font-size: +50;">9th Grader</span>. <br> I am an <span style="color: #ca2828; font-size:+50;">Amateur Developer</span> and I like to <span style="color: #ca2828; font-size:+50;">Code</span> and have fun.</h1>
+            <h1 style = "position:relative; color:#a1d5ff;"><br>Hi! My name is <span style="color: #ca2828; font-size:+50;">MilkshakeTheCoder</span>. <br> I am a rising <span style="color: #ca2828; font-size: +50;">9th Grader</span>. <br> I am an <span style="color: #ca2828; font-size:+50;">Amateur Developer</span> and I like to <span style="color: #ca2828; font-size:+50;">Code</span> and have fun.<br></h1>
         </div>
             <nav>
                 <ul>
@@ -28,7 +28,7 @@
         <article>
         <section>
             <h2 style="color:#ca2828">About Me</h2>
-            <p>👋 Hi, My name is Aahil. I am a rising ninth grader and I plan on majoring in software engineering. I love to code in lots of languages. As of right now, I'm working on developing Discord Bots and learning Python better as a whole. I like to take computers apart (my dad has tons of old unused computers) and put them back together. I love to install new operating systems and play around with all the possibilites with different distributions of linux. <br> <br> 
+            <p><br>👋 Hi, My name is Aahil. I am a rising ninth grader and I plan on majoring in software engineering. I love to code in lots of languages. As of right now, I'm working on developing Discord Bots and learning Python better as a whole. I like to take computers apart (my dad has tons of old unused computers) and put them back together. I love to install new operating systems and play around with all the possibilites with different distributions of linux. <br> <br> 
 
 🗣 I also wanna learn other languages such as: C, JS, and a better knowledge of HTML/CSS. <br> <br> 
 
