--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <div class="navbar">
         <!--I put this in a new div above the navbar stuff. check css for this new class!-->
         <div class="text-container">
-            <h1 style = "position:relative; color:#a1d5ff;"><br>Hi! My name is <span style="color: #ca2828; font-size:+50;">MilkshakeTheCoder</span>. <br> I am a rising <span style="color: #ca2828; font-size: +50;">9th Grader</span>. <br> I am an <span style="color: #ca2828; font-size:+50;">Amateur Developer</span> and I like to <span style="color: #ca2828; font-size:+50;">Code</span> and have fun.</h1><br>
+            <h1 style = "position:relative; color:#a1d5ff;"><br>Hi! My name is <span style="color: #ca2828; font-size:+50;">MilkshakeTheCoder</span>. <br> I am a rising <span style="color: #ca2828; font-size: +50;">9th Grader</span>. <br> I am an <span style="color: #ca2828; font-size:+50;">Amateur Developer</span> and I like to <span style="color: #ca2828; font-size:+50;">Code</span> and have fun.<br></h1>
         </div>
             <nav>
                 <ul>
                 </ul>
             </nav>
 <!-- link in image. -->
-        <a href="https://github.com/MilkshakeTheCoder">
+        <!-- <a href="https://github.com/MilkshakeTheCoder">
             <img src="Images/github.png" class="github">
         </a>
         <a href="https://discord.gg/CtNTUX4znA">
@@ -23,7 +23,7 @@
         </a>
         <a href="https://stackoverflow.com/users/15837152/aahil-py">
             <img src="Images/stackoverflow.png" class="stackoverflow">
-        </a>
+        </a> -->
     </div>
         <article>
         <section>
