--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ I also just feel that open source projects are more reliable as compared to clos
         </section>
         <section>
             <h2 style="color:#ca2828">My Experiences</h2>
-            <p><br>Things I have been a part of: <br> <mini_section>Github.</mini_section></p>
+            <p><br> <mini_section>Github.</mini_section></p>
         </section>
         </article>
     </div>
