updated stylesheet and html

--- a/index.html
+++ b/index.html
@@ -44,8 +44,11 @@ I also just feel that open source projects are more reliable as compared to clos
             </p>
         </section>
         <section>
-            <h2 style="color:#ca2828">My Experiences</h2>
-            <p><br> <mini_section>Github.</mini_section></p>
+            <h2 style="color:#ca2828">My Repositories</h2>
+            <p><br> <minisection>Cafe_Bot<br><a href="https://stackoverflow.com/users/15837152/aahil-py">
+                <img src="Images/Cafe Bot-logos.png">
+            </a>
+                    </minisection></p>
         </section>
         </article>
     </div>
