updated stylesheet and html

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ I also just feel that open source projects are more reliable as compared to clos
             </p>
         </section>
         <section>
-            <h2 style="color:#ca2828">My Repositories</h2>
+            <h2 style="color:#ca2828">My Github Repositories</h2>
             <p><br> <minisection>Cafe_Bot<br><a href="https://stackoverflow.com/users/15837152/aahil-py">
                 <img src="Images/Cafe Bot-logos.png">
             </a>
