--- a/index.html
+++ b/index.html
@@ -45,10 +45,11 @@ I also just feel that open source projects are more reliable as compared to clos
         </section>
         <section>
             <h2 style="color:#ca2828">My Github Repositories</h2>
-            <p><br> <minisection>Cafe_Bot<br><a href="https://stackoverflow.com/users/15837152/aahil-py">
+            <p><br> <section><minisection>Cafe_Bot</minisection><br><a href="https://stackoverflow.com/users/15837152/aahil-py">
                 <img src="Images/Cafe Bot-logos.png">
             </a>
-                    </minisection></p>
+                    </section>        
+            </p>
         </section>
         </article>
     </div>
