--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@ I also just feel that open source projects are more reliable as compared to clos
         </section>
         <section>
             <h2 style="color:#ca2828">My Github Repositories</h2>
-            <p><br> <section><minisection>Cafe_Bot</minisection><br><a href="https://stackoverflow.com/users/15837152/aahil-py">
-                <img src="Images/Cafe Bot-logos.png">
-            </a>
-                    </section>        
+            <p><br> 
+            <a href="https://github.com/MilkshakeTheCoder/Cafe_Bot">
+                <img src="https://github-readme-stats.vercel.app/api/pin/?username=MilkshakeTheCoder&repo=Cafe_Bot&theme=algolia" />
+              </a>     
             </p>
         </section>
         </article>
