--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ I also just feel that open source projects are more reliable as compared to clos
             <h2 style="color:#ca2828">My Github Repositories</h2>
             <p><br> 
             <a href="https://github.com/MilkshakeTheCoder/Cafe_Bot">
-                <img src="https://github-readme-stats.vercel.app/api/pin/?username=MilkshakeTheCoder&repo=Cafe_Bot&theme=algolia" />
+                <img src="https://github-readme-stats.vercel.app/api/pin/?username=MilkshakeTheCoder&repo=Cafe_Bot&theme=react" />
               </a>     
             </p>
         </section>
