--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@ I also just feel that open source projects are more reliable as compared to clos
             <p><br> 
             <a href="https://github.com/MilkshakeTheCoder/Cafe_Bot">
                 <img src="https://github-readme-stats.vercel.app/api/pin/?username=MilkshakeTheCoder&repo=Cafe_Bot&theme=react" />
-              </a>     
+            </a>
+            <a href="https://github.com/MilkshakeTheCoder/Learning-Python">
+                <img src="https://github-readme-stats.vercel.app/api/pin/?username=MilkshakeTheCoder&repo=Learning-Python&theme=react" />
+            </a>   
             </p>
         </section>
         </article>
