--- a/index.html
+++ b/index.html
@@ -51,7 +51,13 @@ I also just feel that open source projects are more reliable as compared to clos
             </a>
             <a href="https://github.com/MilkshakeTheCoder/Learning-Python">
                 <img src="https://github-readme-stats.vercel.app/api/pin/?username=MilkshakeTheCoder&repo=Learning-Python&theme=react" />
-            </a>   
+            </a>
+            <a href="https://github.com/MilkshakeTheCoder/Learning-HTML">
+                <img src="https://github-readme-stats.vercel.app/api/pin/?username=MilkshakeTheCoder&repo=Learning-HTML&theme=react" />
+            </a>
+            <a href="https://github.com/MilkshakeTheCoder/milkshakethecoder.github.io">
+                <img src="https://github-readme-stats.vercel.app/api/pin/?username=MilkshakeTheCoder&repo=milkshakethecoder.github.io&theme=react" />
+            </a> 
             </p>
         </section>
         </article>
