--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@ I also just feel that open source projects are more reliable as compared to clos
             </a> 
             </p>
         </section>
+        <section>
+            <h2 style="color:#ca2828">Connect W/ Me!</h2>
+            <p><br><img src="https://img.icons8.com/windows/32/000000/github.png"/></p>
+        </section>
+        <section>
         </article>
     </div>
 </body>
