--- a/index.html
+++ b/index.html
@@ -62,9 +62,8 @@ I also just feel that open source projects are more reliable as compared to clos
         </section>
         <section>
             <h2 style="color:#ca2828">Connect W/ Me!</h2>
-            <p><br><img src="https://img.icons8.com/windows/32/000000/github.png"/></p>
+            <p><br><img src="https://img.icons8.com/ios/50/000000/github--v2.png"/> <img src="https://img.icons8.com/ios/50/000000/discord-logo--v2.png"/> </p>
         </section>
-        <section>
         </article>
     </div>
 </body>
