--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ I also just feel that open source projects are more reliable as compared to clos
         </section>
         <section>
             <h2 style="color:#ca2828">Connect W/ Me!</h2>
-            <p><br><img src="https://img.icons8.com/ios/50/000000/github--v2.png"/> <img src="https://img.icons8.com/ios/50/000000/discord-logo--v2.png"/> </p>
+            <p style="align-items: center;"><br><img src="https://img.icons8.com/ios/50/000000/github--v2.png"/> <img src="https://img.icons8.com/ios/50/000000/discord-logo--v2.png"/> </p>
         </section>
         </article>
     </div>
