--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ I also just feel that open source projects are more reliable as compared to clos
         </section>
         <section>
             <h2 style="color:#ca2828">Connect W/ Me!</h2>
-            <p style="align-items: center;"><img src="https://img.icons8.com/ios-filled/100/ffffff/github.png"/> <img src="https://img.icons8.com/ios-filled/50/ffffff/discord-logo.png"/> <a href="https://stackoverflow.com/users/15837152/aahil-py"><img src="https://img.icons8.com/ios-filled/100/ffffff/stackoverflow.png"/></a></p>
+            <p style="align-items: center;"><img src="https://img.icons8.com/ios-filled/100/ffffff/github.png" class="github"/> <img src="https://img.icons8.com/ios-filled/50/ffffff/discord-logo.png" class="discord"/> <a href="https://stackoverflow.com/users/15837152/aahil-py"><img src="https://img.icons8.com/ios-filled/100/ffffff/stackoverflow.png" class="stackoverflow"/></a></p>
         </section>
         </article>
     </div>
