updated html and css

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ I also just feel that open source projects are more reliable as compared to clos
             </a> 
             </p>
         </section>
-        <section style="width: fit-content;">
+        <section>
             <h2 style="color:#ca2828">Connect W/ Me!</h2>
             <p style="display: flex; justify-content:center;"><a href="https://github.com/MilkshakeTheCoder"><img src="https://img.icons8.com/ios-filled/100/ffffff/github.png" class="github"/></a> <a href="https://discord.gg/CtNTUX4znA"><img src="https://img.icons8.com/ios-filled/100/ffffff/discord-logo.png" class="discord"/></a> <a href="https://stackoverflow.com/users/15837152/aahil-py"><img src="https://img.icons8.com/ios-filled/100/ffffff/stackoverflow.png" class="stackoverflow"/></a></p>
         </section>
