--- a/index.html
+++ b/index.html
@@ -47,16 +47,16 @@ I also just feel that open source projects are more reliable as compared to clos
             <h2 style="color:#ca2828">My Github Repositories</h2>
             <p><br> 
             <a href="https://github.com/MilkshakeTheCoder/Cafe_Bot">
-                <img src="https://github-readme-stats.vercel.app/api/pin/?username=MilkshakeTheCoder&repo=Cafe_Bot&theme=react" />
+                <img src="https://github-readme-stats.vercel.app/api/pin/?username=MilkshakeTheCoder&repo=Cafe_Bot&theme=react" class="CafeBot"/>
             </a>
             <a href="https://github.com/MilkshakeTheCoder/Learning-Python">
-                <img src="https://github-readme-stats.vercel.app/api/pin/?username=MilkshakeTheCoder&repo=Learning-Python&theme=react" />
+                <img src="https://github-readme-stats.vercel.app/api/pin/?username=MilkshakeTheCoder&repo=Learning-Python&theme=react" class="LearningPython"/>
             </a>
             <a href="https://github.com/MilkshakeTheCoder/Learning-HTML">
-                <img src="https://github-readme-stats.vercel.app/api/pin/?username=MilkshakeTheCoder&repo=Learning-HTML&theme=react" />
+                <img src="https://github-readme-stats.vercel.app/api/pin/?username=MilkshakeTheCoder&repo=Learning-HTML&theme=react" class="LearningHTML"/>
             </a>
             <a href="https://github.com/MilkshakeTheCoder/milkshakethecoder.github.io">
-                <img src="https://github-readme-stats.vercel.app/api/pin/?username=MilkshakeTheCoder&repo=milkshakethecoder.github.io&theme=react" />
+                <img src="https://github-readme-stats.vercel.app/api/pin/?username=MilkshakeTheCoder&repo=milkshakethecoder.github.io&theme=react" class="Website"/>
             </a> 
             </p>
         </section>
