updated html added app and particles.js for background

--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
 I also just feel that open source projects are more reliable as compared to closed-source projects. Thanks for vising website page, be sure to explore the rest of the page, and have a great day!
             </p>
         </section>
+        <div id="particles-js"></div>
+        <script src="particles.js"></script>
         <section>
             <h2 style="color:#ca2828">My Github Repositories</h2>
             <p><br> 
@@ -52,8 +54,8 @@ I also just feel that open source projects are more reliable as compared to clos
             </p>
         </section>
         <section>
-            <h2 style="color:#ca2828">My Hobbies</h2>
-            <p><br>
+            <h2 style="color:#ca2828">Languages and Applications That I've Used</h2>
+            <p><br>e</p>
         </section>
         <section>
             <h2 style="color:#ca2828">Connect W/ Me!</h2>
