important updates html and css

--- a/index.html
+++ b/index.html
@@ -55,7 +55,10 @@ I also just feel that open source projects are more reliable as compared to clos
         </section>
         <section>
             <h2 style="color:#ca2828">Languages and Applications That I've Used</h2>
-            <p><br>e</p>
+            <p><br>
+            <a href="mongodb.com">
+                <img src="https://img.shields.io/badge/MongoDB-darkgreen?style=for-the-badge&logo=mongo&logoColor=white"/>
+            </a></p>
         </section>
         <section>
             <h2 style="color:#ca2828">Connect W/ Me!</h2>
