--- a/index.html
+++ b/index.html
@@ -59,6 +59,27 @@ I also just feel that open source projects are more reliable as compared to clos
             <a href="mongodb.com">
                 <img src="https://img.shields.io/badge/MongoDB-darkgreen?style=for-the-badge&logo=MongoDB&logoColor=white"/>
             </a>
+            <a href="python.org">
+                <img src="https://img.shields.io/badgePython-darkblue?style=for-the-badge&logo=Python&logoColor=white"/>
+            </a>
+            <a href="html.com">
+                <img src="https://img.shields.io/badgeHTML-redorange?style=for-the-badge&logo=HTML&logoColor=white"/>
+            </a>
+            <a href="www.w3.org/Style/CSS/Overview.en.html">
+                <img src="https://img.shields.io/badgeCSS-blue?style=for-the-badge&logo=CSS&logoColor=white"/>
+            </a>
+            <a href="linuxmint.com/">
+                <img src="https://img.shields.io/badgeLinux Mint-green?style=for-the-badge&logo=LinuxMint&logoColor=white"/>
+            </a>
+            <a href="linux.org/">
+                <img src="https://img.shields.io/badgeUbuntu-purple?style=for-the-badge&logo=ubuntu&logoColor=white"/>
+            </a>
+            <a href="github.com/">
+                <img src="https://img.shields.io/badgeGithub-black?style=for-the-badge&logo=github&logoColor=white"/>
+            </a>
+            <a href="code.visualstudio.com//">
+                <img src="https://img.shields.io/badgeVSCode-darkblue?style=for-the-badge&logo=visualstudiocode&logoColor=white"/>
+            </a>
             </p>
         </section>
         <section>
