important updates html

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ I also just feel that open source projects are more reliable as compared to clos
                 <img src="https://img.shields.io/badge/Python-darkblue?style=for-the-badge&logo=Python&logoColor=white"/>
             </a>
             <a href="html.com">
-                <img src="https://img.shields.io/badge/HTML-redorange?style=for-the-badge&logo=HTML5&logoColor=white"/>
+                <img src="https://img.shields.io/badge/HTML-red?style=for-the-badge&logo=HTML5&logoColor=white"/>
             </a>
             <a href="www.w3.org/Style/CSS/Overview.en.html">
                 <img src="https://img.shields.io/badge/CSS-blue?style=for-the-badge&logo=CSS3&logoColor=white"/>
