--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <article>
         <section>
             <h2 style="color:#ca2828">About Me</h2>
-            <p><br>👋 Hi, My name is Aahil. I am a rising ninth grader and I plan on majoring in software engineering. I love to code in lots of languages. As of right now, I'm working on developing Discord Bots and learning Python better as a whole. I like to take computers apart (my dad has tons of old unused computers) and put them back together. I love to install new operating systems and play around with all the possibilites with different distributions of linux. <br> <br> 
+            <p><br>👋 Hi, My name is MilkshakeTheCoder. I am a rising ninth grader and I plan on majoring in software engineering. I love to code in lots of languages. As of right now, I'm working on developing Discord Bots and learning Python better as a whole. I like to take computers apart (my dad has tons of old unused computers) and put them back together. I love to install new operating systems and play around with all the possibilites with different distributions of linux. <br> <br> 
 
 🗣 I also wanna learn other languages such as: C, JS, and a better knowledge of HTML/CSS. <br> <br> 
 
@@ -29,7 +29,7 @@
 
 👨‍🍳 I enjoy many cuisines and I am slowly learning to make foods from all of them. <br> <br> 
 
-🐙 Most of my code will be posted on github, because I like uploading big projects here so other people can also see and learn from those. <br> <br> 
+🐙 Most of my code will be posted on github, because I like uploading big projects there so other people can also see and learn from those. <br> <br> 
 
 I also just feel that open source projects are more reliable as compared to closed-source projects. Thanks for vising website page, be sure to explore the rest of the page, and have a great day!
             </p>
