--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <div class="navbar">
         <!--I put this in a new div above the navbar stuff. check css for this new class!-->
         <div class="text-container">
-            <h1 style = "position:relative; left:40%"><br>Hi! My name is <span style="color: #ca2828; font-size:+50;">MilkshakeTheCoder</span>. <br> I am a rising <span style="color: #ca2828; font-size: +50;">9th Grader</span>. <br> I am an <span style="color: #ca2828; font-size:+50;">Amateur Developer</span> and I like to <span style="color: #ca2828; font-size:+50;">Code</span> and have fun. <br> ⠀</h1>
+            <h1 style = "position:relative; left:40%"><br>Hi! My name is <span style="color: #fffb00; font-size:+50;">MilkshakeTheCoder</span>. <br> I am a rising <span style="color: #fffb00; font-size: +50;">9th Grader</span>. <br> I am an <span style="color: #fffb00; font-size:+50;">Amateur Developer</span> and I like to <span style="color: #fffb00; font-size:+50;">Code</span> and have fun. <br> ⠀</h1>
         </div>
             <nav>
                 <ul>
@@ -18,7 +18,7 @@
     </div>
         <article>
         <section>
-            <h2 style="color:#ca2828">About Me</h2>
+            <h2 style="color:#fffb00">About Me</h2>
             <p><br>👋 Hi, My name is MilkshakeTheCoder. I am a rising ninth grader and I plan on majoring in software engineering. I love to code in lots of languages. As of right now, I'm working on developing Discord Bots and learning Python better as a whole. I like to take computers apart (my dad has tons of old unused computers) and put them back together. I love to install new operating systems and play around with all the possibilites with different distributions of linux. <br> <br> 
 
 🗣 I also wanna learn other languages such as: C, JS, and a better knowledge of HTML/CSS. <br> <br> 
@@ -37,7 +37,7 @@ I also just feel that open source projects are more reliable as compared to clos
         <div id="particles-js"></div>
         <script src="particles.js"></script>
         <section>
-            <h2 style="color:#ca2828">My Github Repositories</h2>
+            <h2 style="color:#fffb00">My Github Repositories</h2>
             <p><br> 
             <a href="https://github.com/MilkshakeTheCoder/Cafe_Bot">
                 <img src="https://github-readme-stats.vercel.app/api/pin/?username=MilkshakeTheCoder&repo=Cafe_Bot&theme=react" class="CafeBot"/>
@@ -54,7 +54,7 @@ I also just feel that open source projects are more reliable as compared to clos
             </p>
         </section>
         <section>
-            <h2 style="color:#ca2828">Languages and Applications That I've Used</h2>
+            <h2 style="color:#fffb00">Languages and Applications That I've Used</h2>
             <p><br>
             <a href="mongodb.com">
                 <img src="https://img.shields.io/badge/MongoDB-darkgreen?style=for-the-badge&logo=MongoDB&logoColor=white"/>
@@ -83,7 +83,7 @@ I also just feel that open source projects are more reliable as compared to clos
             </p>
         </section>
         <section>
-            <h2 style="color:#ca2828">Connect W/ Me!</h2>
+            <h2 style="color:#fffb00">Connect W/ Me!</h2>
             <p style="display: flex; justify-content:center;"><br><a href="https://github.com/MilkshakeTheCoder"><img src="https://img.icons8.com/ios-filled/100/ffffff/github.png" class="github"/></a><a href="https://discord.gg/CtNTUX4znA"><img src="https://img.icons8.com/ios-filled/100/ffffff/discord-logo.png" class="discord"/></a> <a href="https://stackoverflow.com/users/15837152/aahil-py"><img src="https://img.icons8.com/ios-filled/100/ffffff/stackoverflow.png" class="stackoverflow"/></a></p>
         </section>
         </article>
