--- a/index.html
+++ b/index.html
@@ -56,28 +56,28 @@ I also just feel that open source projects are more reliable as compared to clos
         <section>
             <h2 style="color:#fffb00">Languages and Applications That I've Used</h2>
             <p><br>
-            <a href="mongodb.com">
+            <a href="https://mongodb.com">
                 <img src="https://img.shields.io/badge/MongoDB-darkgreen?style=for-the-badge&logo=MongoDB&logoColor=white"/>
             </a>
-            <a href="python.org">
+            <a href="https://python.org">
                 <img src="https://img.shields.io/badge/Python-darkblue?style=for-the-badge&logo=Python&logoColor=white"/>
             </a>
-            <a href="html.com">
+            <a href="https://html.com">
                 <img src="https://img.shields.io/badge/HTML-red?style=for-the-badge&logo=HTML5&logoColor=white"/>
             </a>
-            <a href="www.w3.org/Style/CSS/Overview.en.html">
+            <a href="https://www.w3.org/Style/CSS/Overview.en.html">
                 <img src="https://img.shields.io/badge/CSS-blue?style=for-the-badge&logo=CSS3&logoColor=white"/>
             </a>
-            <a href="linuxmint.com/">
+            <a href="https://linuxmint.com/">
                 <img src="https://img.shields.io/badge/Linux Mint-green?style=for-the-badge&logo=LinuxMint&logoColor=white"/>
             </a>
-            <a href="linux.org/">
+            <a href="https://linux.org/">
                 <img src="https://img.shields.io/badge/Ubuntu-purple?style=for-the-badge&logo=ubuntu&logoColor=white"/>
             </a>
-            <a href="github.com/">
+            <a href="https://github.com/">
                 <img src="https://img.shields.io/badge/Github-black?style=for-the-badge&logo=github&logoColor=white"/>
             </a>
-            <a href="code.visualstudio.com//">
+            <a href="https://code.visualstudio.com//">
                 <img src="https://img.shields.io/badge/VSCode-darkblue?style=for-the-badge&logo=visualstudiocode&logoColor=white"/>
             </a>
             </p>
