--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ I also just feel that open source projects are more reliable as compared to clos
             </p>
         </section>
         <section>
-            <h2 style="color:#fffb00; width: fit-content;">Languages and Applications That I've Used</h2>
+            <h2 style="color:#fffb00">Languages and Applications That I've Used</h2>
             <p><br>
             <a href="https://mongodb.com">
                 <img src="https://img.shields.io/badge/MongoDB-darkgreen?style=for-the-badge&logo=MongoDB&logoColor=white"/>
