updated a TON of stuff

--- a/contact.html
+++ b/contact.html
@@ -22,27 +22,16 @@
       </nav>
     </div>
 </header>
-<main id="home">
-  <img src="Images/milkshakethecoder.png" class="homeport" style="float: right;"/>
-  <h1>
-    MilkshakeTheCoder
+<main id="contact">
+  <h1 style="font-size: 6rem; color: #82b8ff;">
+    Contact Me!
   </h1>
-  <h2 style="font-size: 3rem; color: #82b8ff;">
-    9th Grader, Programmer and Web Developer
-  </h2>
-  <div class="icons">
-    <a href="https://github.com/MilkshakeTheCoder">
-      <img src="https://img.icons8.com/ios-filled/60/ffffff/github.png" class="github"/>
-    </a>
-    <a href="https://discord.gg/CtNTUX4znA">
-      <img src="https://img.icons8.com/ios-filled/60/ffffff/discord-logo.png" class="discord"/>
-    </a>
-    <a href="https://stackoverflow.com/users/15837152/aahil-py">
-      <img src="https://img.icons8.com/ios-filled/60/ffffff/stackoverflow.png" class="stackoverflow"/>
-    </a>
-  </div>
+  <section>
+    <h2 style="color:#82b8ff">Connect W/ Me!</h2>
+    <p style="display: flex; justify-content:center;"><br><a href="https://github.com/MilkshakeTheCoder"><img src="https://img.icons8.com/ios-filled/50/ffffff/github.png" class="github"/></a><a href="https://discord.gg/CtNTUX4znA"><img src="https://img.icons8.com/ios-filled/50/ffffff/discord-logo.png" class="discord"/></a> <a href="https://stackoverflow.com/users/15837152/aahil-py"><img src="https://img.icons8.com/ios-filled/50/ffffff/stackoverflow.png" class="stackoverflow"/></a></p>
+</section>
 </main>
-<footer style="text-align: center; color: #82b8ff; margin-top: 200px;">
+<footer style="text-align: center; color: #82b8ff;">
   @Copyright MilkshakeTheCoder 2021 - All Right Reserved. 
 </footer>
 </html>
