--- a/Cafe_Bot.html
+++ b/Cafe_Bot.html
@@ -22,7 +22,78 @@
       </nav>
     </div>
 </header>
-<main id="cbot">
+<main id="cbot" style="text-align: center;">
+<h1 id="cafe_bot">Cafe_Bot</h1>
+<p><img src="https://user-images.githubusercontent.com/83626443/118020079-91aed400-b30e-11eb-83ed-f88fa81dc51c.png" alt="Cafe Bot-logos"></p>
+<h2 id="motivation">Motivation</h2>
+<p>Our motivation to make this bot came from a small build-up of frustration at other discord bots. They only did specific things, and you had to add multiple of them to make a good server with good bots. A friend and I both shared this belief. We decided that we should make our own discord bot, to cure other people of this frustration. So, that&#39;s what we&#39;ve done! This is a combination of many attributes of many popular bots. Now, half your server-space doesn&#39;t get taken up by bots! You just have to add 1!</p>
+<h2 id="features">Features</h2>
+<p>This is an all-around Discord Bot, with many features, such as:</p>
+<ul>
+<li>AI-Chat System¹</li>
+<li>Currency System¹</li>
+<li>Error Handler³</li>
+<li>Giveaway System³</li>
+<li>Custom Help Command (Not the ugly orginal bot-rendered one.)⁴</li>
+<li>A Welcoming and Leaving System³</li>
+<li>Moderation Commands³</li>
+<li>A Polling System³</li>
+<li>Eval &amp; Stat Commands²</li>
+<li>A Leveling System³</li>
+<li>Reaction-Roles²</li>
+<li>Admin-Only Commands³</li>
+<li>A Calculator System³</li>
+<li>A Suggestion System with Upvotes and Downvotes³</li>
+<li>A setchannel command where you can set certain channels in your server!³</li>
+<li>and much more!</li>
+</ul>
+<p><a href="https://discord.com/oauth2/authorize?client_id=832409595791409242&amp;permissions=8&amp;scope=bot">Invite The Bot to Your Server!</a></p>
+<p>Inviting it would mean a ton to me, the main developer of this bot, to see it in a public server, so please add it! 😁</p>
+<h2 id="prerequisites">Prerequisites</h2>
+<p>Mainly a bunch of pip installs, for the project to work.</p>
+<p>Python 3.6+</p>
+<p>A working Text Editor or IDE.</p>
+<p>and then merely <code>pip install -U -r requirements.txt</code>.</p>
+<h2 id="usage">Usage</h2>
+<p>Many of you that have come across this page, probably want to use this code for yourself. ⚡ NEWS FLASH ⚡, many people that just take things from a person&#39;s github and use it for themselves and they DON&#39;T GIVE CREDIT! If you want to us it properly, then you have to give credit to this github page, and all the contributors.</p>
+<p>Well, anyway, to use it, there will be certain things you will have to replace in your code, as well as required prerequisites (mentioned above), in order for the code to work properly.</p>
+<p>First things first: You will need to create a bot from your discord developer portal:
+<img src="https://user-images.githubusercontent.com/83626443/118029530-1bfc3580-b319-11eb-8452-48cf12541420.gif" alt="bot-token1"></p>
+<p>Then, you need an API Key for PRSAW from <a href="https://api-info.pgamerx.com/register.html">PGamerX</a>. (Steps should be self explanatory.)</p>
+<p>Now, after these steps, this step can go 3 ways from here.</p>
+<p><a href="SECRETS.md">The 3 ways... (<strong>VERY</strong> IMPORTANT)</a></p>
+<p>After that, there will be some [small things] to replace in the code, to make sure it still works.</p>
+<ul>
+<li>And that should be it for prerequisites and installations.</li>
+</ul>
+<h2 id="current-build-status">Current Build Status</h2>
+<ul>
+<li>@MilkshakeTheCoder - (Possible ModLog???, Cleanup)</li>
+<li>@Andrewthederp - (Currency System Upgrades, Overall better feel.)</li>
+</ul>
+<h2 id="main-technologies-used">Main Technologies Used</h2>
+<ul>
+<li>Python 3.8+</li>
+<li>Discord</li>
+<li>Discord.py</li>
+<li>Github</li>
+<li>Replit</li>
+<li>UpTimeRobot</li>
+</ul>
+<h2 id="after-that-">After that...</h2>
+<ul>
+<li>You should be free to run the code and have a fully functioning bot! If there are problems with our explanation and/code, please be sure to let us know in the discussion below! Also, be sure to join our server!</li>
+</ul>
+<p><a href="https://discord.gg/CtNTUX4znA">Join our Discord Server!</a></p>
+<h2 id="credits-and-acknowledgments">Credits and Acknowledgments</h2>
+<p>Code With Swastik¹ ⠀⍿ ⠀<a href="https://github.com/CodeWithSwastik">Github</a> · <a href="https://www.youtube.com/c/CodeWithSwastik/featured">Youtube</a></p>
+<p>MenuDocs² ⠀⍿ ⠀<a href="https://github.com/MenuDocs">Github</a> · <a href="https://www.youtube.com/channel/UCpGGFqJP9vYvzFudqnQ-6IA">Youtube</a></p>
+<p>@pikaninja⁴ ⠀⍿ ⠀<a href="https://github.com/pikaninja">Github</a></p>
+<h2 id="fellow-coders-and-contributors-">Fellow Coders and Contributors³</h2>
+<p>@MilkshakeTheCoder ⠀⍿ ⠀<a href="https://github.com/MilkshakeTheCoder">Github</a></p>
+<p>@Andreawthederp ⠀⍿ ⠀<a href="https://github.com/andrewthederp">Github</a></p>
+<p>Also check out our <a href="https://github.com/MilkshakeTheCoder/Cafe_Bot/blob/main/CODE_OF_CONDUCT.md">Code of Conduct</a>.</p>
+
 </main>
 <footer style="text-align: center; color: #82b8ff;">
   @Copyright MilkshakeTheCoder 2021 - All Right Reserved. 
